--- a/FinalProject_Group017-FA24.ipynb
+++ b/FinalProject_Group017-FA24.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Overview\n",
     "\n",
-    "Our project will analyze the trend of the value of the cryptocurrency Bitcoin compared to social media, more specifically tweets that discuss Bitcoin or has any relevance towards it. I explored this by gathering data from Kaggle of the historical price of Bitcoin along with tweets that mention it from Twitter. After gathering and cleaning up our data, I were able to find the relationship between Bitcoin price and social media and ultimately found that there does not exist a relationship. There are not any positive nor negative trends in tweets from individuals that can directly influence the value of the cryptocurrency.\n"
+    "The project will analyze the trend of the value of the cryptocurrency Bitcoin compared to social media, more specifically tweets that discuss Bitcoin or has any relevance towards it. I explored this by gathering data from Kaggle of the historical price of Bitcoin along with tweets that mention it from Twitter. After gathering and cleaning up our data, I was able to find the relationship between Bitcoin price and social media and ultimately found that there does not exist a relationship. There are not any positive nor negative trends in tweets from individuals that can directly influence the value of the cryptocurrency.\n"
    ]
   },
   {
@@ -1452,37 +1452,28 @@
     "\n",
     "This makes logical sense as high stakes financial markets are bound to have an emotional effect on those that participate in it and this effect is reflected in their social media posts. \n",
     "\n",
-    "Our work builds upon the prior studies mentioned in our background section that demonstrates links between social media sentiment and Bitcoin prices, such as the study on Twitter’s “public mood” and its connection to price volatility and the analysis of Reddit discussion about cryptocurrency. While these previous studies emphasize the influence of sentiment on price movement, our findings demonstrate the reverse nature of this relationship, with a stronger influence on how price drives social media sentiment. Again, this relationship makes sense that the dynamic nature of cryptocurrency prices can affect the social media users emotionally. \n",
+    "Our work builds upon the prior studies mentioned in our background section that demonstrates links between social media sentiment and Bitcoin prices, such as the study on Twitter’s “public mood” and its connection to price volatility and the analysis of Reddit discussion about cryptocurrency. While these previous studies emphasize the influence of sentiment on price movement, my findings demonstrate the reverse nature of this relationship, with a stronger influence on how price drives social media sentiment. Again, this relationship makes sense that the dynamic nature of cryptocurrency prices can affect the social media users emotionally. \n",
     "\n",
     "##### Limitations and Challenges:\n",
     "One major challenge was the high noise in sentiment data, which is inherent to social media platforms where content varies widely in quality, context, and relevance. Additionally, the weak causality between sentiment metrics and price trends highlight the difficulty of using sentiment as a standalone predictor in a market influenced by multiple external factors, including macroeconomic events, regulatory news, and market manipulation.\n",
     "\n",
     "Another limitation stems from the dynamic nature of both sentiment and financial markets. There are many variables that play that predict price action, motivations of market movers, retail traders, economic policy, etc. Because of this, sentiment data about Bitcoin from Twitter/X isn’t enough to really model and predict price action. Instead it should be used as a possible indicator alongside other metrics if price action is really to be modeled and predicted. \n",
     "\n",
-    "Our analysis was constrained by the time period and dataset used, which only had data from 2021 to 2023, which may not fully capture long-term trends or sudden, impactful events like market crashes or surges, events where sentiment from social media could be a big indicator.\n",
+    "The analysis was constrained by the time period and dataset used, which only had data from 2021 to 2023, which may not fully capture long-term trends or sudden, impactful events like market crashes or surges, events where sentiment from social media could be a big indicator.\n",
     "\n",
     "#### Conclusion:\n",
     "\n",
-    "Our research question was, “Can I identify a measurable correlation/causality between specific social media sentiment indicators on platforms like X (formerly Twitter), and key Bitcoin price metrics?\n",
+    "The research question was, “Can I identify a measurable correlation/causality between specific social media sentiment indicators on platforms like X (formerly Twitter), and key Bitcoin price metrics?\n",
     "\n",
-    "Through our analysis, I were unable to establish a causality between sentiment and Bitcoin price action, ultimately rejecting our initial hypothesis.\n",
+    "Through this analysis, I was unable to establish a causality between sentiment and Bitcoin price action, ultimately rejecting our initial hypothesis.\n",
     "\n",
     "Despite these limitations, this project provided valuable insights and hands-on experience with key techniques in data analysis. I successfully applied the foundational methods taught in COGS108, including data gathering, cleaning, exploratory data analysis (EDA), hypothesis testing, and visualization. The project taught us the importance of examining data through multiple perspectives, such as statistical tests, graphical representations, and machine learning models, to develop an understanding of complex statistical relationships among datasets.\n",
     "\n",
-    "While our findings do not support the predictive power of sentiment metrics for Bitcoin prices, they demonstrated the nuanced relationship between market behavior and public sentiment. Future research could build on this work by incorporating more advanced natural language processing techniques, a broader dataset including multiple social media platforms, or additional external factors such as global news or macroeconomic events.\n",
+    "While my findings do not support the predictive power of sentiment metrics for Bitcoin prices, they demonstrated the nuanced relationship between market behavior and public sentiment. Future research could build on this work by incorporating more advanced natural language processing techniques, a broader dataset including multiple social media platforms, or additional external factors such as global news or macroeconomic events.\n",
     "\n",
-    "In conclusion, our study aims to look at the causality between social media sentiment and Bitcoin market behavior. I ultimately found that for our dataset, social media sentiment did not have a significant impact on predicting Bitcoin market behaviour and price action, instead learning that there is a strong causal relationship between Bitcoin market behavior and social media sentiment.\n",
+    "In conclusion, the study aims to look at the causality between social media sentiment and Bitcoin market behavior. I ultimately found that for our dataset, social media sentiment did not have a significant impact on predicting Bitcoin market behaviour and price action, instead learning that there is a strong causal relationship between Bitcoin market behavior and social media sentiment.\n",
     "\n",
     "\n",
-    "# Team Contributions\n",
-    "\n",
-    "Specify who did what. This should be pretty granular, perhaps bullet points, no more than a few sentences per person.\n",
-    "\n",
-    "- Parv Chordiya: Data Wrangling, Sentiment Analysis, EDA2\n",
-    "- Vivek Rane: Finding Datasets, Data Cleaning, EDA, Correlation Matrix\n",
-    "- Sonakshi Mohanty: Discussion, Limitations, Conclusion, Analyzing Code for Description, Team Expectations\n",
-    "- Rahul Bulsara: Overview, Discussion, Ethics and Privacy Concerns\n",
-    "- Varun Naik: Content organisation, EDA, Hypothesis, Research"
    ]
   }
  ],
